[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/Collection.gd" id="1"]

[sub_resource type="StyleBoxFlat" id="1"]
bg_color = Color(0.15, 0.15, 0.2, 0.9)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.4, 0.4, 0.5, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="Collection" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="Background" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="TopBar" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.1
theme_override_styles/panel = SubResource("1")

[node name="Title" type="Label" parent="TopBar"]
anchor_left = 0.4
anchor_right = 0.6
anchor_bottom = 1.0
theme_override_font_sizes/font_size = 24
text = "Deck Collection"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FilterButtons" type="HBoxContainer" parent="TopBar"]
anchor_left = 0.15
anchor_right = 0.35
anchor_top = 0.3
anchor_bottom = 0.7
alignment = 1

[node name="All" type="Button" parent="TopBar/FilterButtons"]
text = "All"
toggle_mode = true
pressed = true

[node name="Owned" type="Button" parent="TopBar/FilterButtons"]
text = "Owned"
toggle_mode = true

[node name="Partial" type="Button" parent="TopBar/FilterButtons"]
text = "In Progress"
toggle_mode = true

[node name="Locked" type="Button" parent="TopBar/FilterButtons"]
text = "Locked"
toggle_mode = true

[node name="SortDropdown" type="OptionButton" parent="TopBar"]
anchor_left = 0.65
anchor_right = 0.85
anchor_top = 0.3
anchor_bottom = 0.7

[node name="ScrollContainer" type="ScrollContainer" parent="."]
anchor_left = 0.05
anchor_top = 0.12
anchor_right = 0.65
anchor_bottom = 0.95

[node name="DeckGrid" type="GridContainer" parent="ScrollContainer"]
columns = 3
add_theme_constant_override("h_separation", 20)
add_theme_constant_override("v_separation", 20)

[node name="DeckInfoPanel" type="Panel" parent="."]
visible = false
anchor_left = 0.67
anchor_top = 0.12
anchor_right = 0.95
anchor_bottom = 0.95
theme_override_styles/panel = SubResource("1")

[node name="DeckName" type="Label" parent="DeckInfoPanel"]
anchor_left = 0.05
anchor_right = 0.95
anchor_top = 0.02
anchor_bottom = 0.08
theme_override_font_sizes/font_size = 20
text = "Deck Name"
horizontal_alignment = 1

[node name="DeckArtist" type="Label" parent="DeckInfoPanel"]
anchor_left = 0.05
anchor_right = 0.95
anchor_top = 0.08
anchor_bottom = 0.12
text = "Artist: Unknown"
horizontal_alignment = 1

[node name="DeckTheme" type="Label" parent="DeckInfoPanel"]
anchor_left = 0.05
anchor_right = 0.95
anchor_top = 0.12
anchor_bottom = 0.16
text = "Theme: Classic"
horizontal_alignment = 1

[node name="DeckPreview" type="TextureRect" parent="DeckInfoPanel"]
anchor_left = 0.1
anchor_right = 0.9
anchor_top = 0.2
anchor_bottom = 0.6
stretch_mode = 5

[node name="CompletionLabel" type="Label" parent="DeckInfoPanel"]
anchor_left = 0.05
anchor_right = 0.95
anchor_top = 0.65
anchor_bottom = 0.7
text = "Completion: 0/78 Cards (0%)"
horizontal_alignment = 1

[node name="ProgressBar" type="ProgressBar" parent="DeckInfoPanel"]
anchor_left = 0.1
anchor_right = 0.9
anchor_top = 0.72
anchor_bottom = 0.76

[node name="ViewGalleryButton" type="Button" parent="DeckInfoPanel"]
anchor_left = 0.2
anchor_right = 0.8
anchor_top = 0.85
anchor_bottom = 0.92
text = "View Gallery"

[node name="GalleryView" type="Panel" parent="."]
visible = false
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
theme_override_styles/panel = SubResource("1")

[node name="GalleryTitle" type="Label" parent="GalleryView"]
anchor_left = 0.4
anchor_right = 0.6
anchor_top = 0.02
anchor_bottom = 0.08
theme_override_font_sizes/font_size = 20
text = "Card Gallery"
horizontal_alignment = 1

[node name="ScrollContainer" type="ScrollContainer" parent="GalleryView"]
anchor_left = 0.05
anchor_top = 0.1
anchor_right = 0.95
anchor_bottom = 0.85

[node name="CardGrid" type="GridContainer" parent="GalleryView/ScrollContainer"]
columns = 6
add_theme_constant_override("h_separation", 10)
add_theme_constant_override("v_separation", 10)

[node name="CloseButton" type="Button" parent="GalleryView"]
anchor_left = 0.4
anchor_right = 0.6
anchor_top = 0.88
anchor_bottom = 0.95
text = "Close Gallery"

[node name="Back" type="Button" parent="."]
anchor_left = 0.02
anchor_top = 0.02
anchor_right = 0.1
anchor_bottom = 0.08
text = "‚Üê Back"